--- a/back-end/package.json
+++ b/back-end/package.json
@@ -19,12 +19,13 @@
   },
   "dependencies": {
     "@hapi/boom": "9.1.4",
-    "@types/express": "4.17.13",
     "body-parser": "1.19.2",
     "cors": "2.8.5",
     "dotenv": "16.0.0",
     "express": "4.17.3",
+    "express-async-errors": "^3.1.1",
     "express-rescue": "1.1.31",
+    "joi": "^17.6.0",
     "jsonwebtoken": "8.5.1",
     "md5": "2.3.0",
     "multer": "1.4.4",
@@ -33,6 +34,9 @@
     "socket.io": "4.4.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
     "@types/sequelize": "^4.28.14",
     "chai": "4.3.6",
     "chai-http": "4.3.0",
