--- a/front-end/package.json
+++ b/front-end/package.json
@@ -22,6 +22,7 @@
     "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.4",
     "@testing-library/user-event": "13.5.0",
+    "axios": "^0.27.2",
     "react": "17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
@@ -30,6 +31,7 @@
     "web-vitals": "2.1.4"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "eslint-config-trybe-frontend": "1.3.0",
     "stylelint": "14.6.0",
     "stylelint-config-standard": "25.0.0",
